Fixed 'please wait' screen and ie7 wrapping issue on employment page

--- a/app/assets/sass/_rcm.scss
+++ b/app/assets/sass/_rcm.scss
@@ -227,6 +227,8 @@ input[type="text"]+label{
 .validation-group {
     margin-bottom: 15px;
     position:relative;
+    clear:both;
+
     &:after {
         clear: both;
         content: '';
@@ -439,8 +441,8 @@ fieldset.form-group {
         width:100%;
         height: 100%;
         position: absolute;
-        opacity: 0.25;
-        filter: alpha(opacity=25);
+        opacity: 0.50;
+        filter: alpha(opacity=50);
     }
     .clock {
         width:100%;
@@ -448,7 +450,17 @@ fieldset.form-group {
         background:transparent url('/public/icons/timer.gif') center center no-repeat;
         position: absolute;
         z-index:1;
+        p {
+            display:block;
+            line-height:2.2em;
+            text-align: center;
+            width:100%;
+            margin-top:110px;
+            background-color:#fff;
+            color:#000;
+            font-weight: bold;
 
+        }
     }
 }
 .margin-bottom-big {
